# RPF_document_summarizer

./: .gitignore  README.md  Setup.md  agent.py  app.py  backends.md  main.py  pyproject.toml  requirements.txt  server.py  st_app.py  streamlit_app.py
agent_memories/: doc_75e53319.md  final_rfp_response.md  pricing_analysis.md  pricing_contextual_summary.md  rfp_document.md  sales_analysis.txt  technical_contextual_summary.md  technical_evaluation.md
notebooks/: experiments.ipynb
prompts/: prompt.py
tools/: tool.py
